# Primes

./: CMakeLists.txt  Doxyfile  Makefile  Primes.cpp  Primes.h  README.md  main.cpp
test/: CMakeLists.txt  PrimesTest.cpp
